--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,70 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,400;6..12,500;6..12,600;6..12,700;6..12,800&display=swap');
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  margin: 0;
+}
+
+.head {
+  height: 50vh;
+  display: flex;
+  background-color: #1D1E22;
+}
+
+.output {
+  height: 50vh;
+  display: flex;
+}
+
+
+
+.bx {
+  flex-grow: 1;
+  flex-basis: 0;
+  display: flex;
+  flex-direction: column;
+  padding: .5rem;
+  background-color: #1D1E22;
+}
+
+.bx.closed {
+  flex-grow: 0;
+}
+
+.bx.closed .CodeMirror-scroll {
+  position: absolute;
+  overflow: hidden !important;
+}
+
+.btn {
+  margin-left: .5rem;
+  background: none;
+  border: none;
+  color: white;
+  cursor: pointer;
+}
+
+.title {
+  display: flex;
+  justify-content: space-between;
+  background-color: #1D1E22;
+  color: white;
+  padding: .5rem .5rem .5rem 1rem;
+  border-top-right-radius: .5rem;
+  border-top-left-radius: .5rem;
+}
+
+.CodeMirror {
+  height: 100% !important;
+}
+
+.codemirror-wrapper {
+  flex-grow: 1;
+  border-bottom-right-radius: .5rem;
+  border-bottom-left-radius: .5rem;
+  overflow: hidden;
+}
